fix: use --navbar-height CSS variable to prevent header overlap on sub-navs

--- a/angular-app/src/app/app.scss
+++ b/angular-app/src/app/app.scss
@@ -6,5 +6,5 @@
 
 main {
   flex: 1;
-  padding-top: 57px; // height of the fixed navbar
+  padding-top: var(--navbar-height);
 }
